--- a/guest（old）/html/show/aimi.html
+++ b/guest（old）/html/show/aimi.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="../../css/show.css" />
 		<link rel="stylesheet" type="text/css" href="../../css/swiper.css" />
 		<link rel="stylesheet" type="text/css" href="../../css/mop-lqs.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/iconcss/iconfont.css" />
 		<link rel="stylesheet prefetch" href="../../css/default-skin.css">
 		<link rel="stylesheet prefetch" href="../../css/photoswipe.css">
 	</head>
@@ -46,6 +47,7 @@
 			<div class="all-fix">
 				<div class="input">
 					<span class="question active"></span>
+					<span class="person"></span>
 					<span class="send-type active">
 						<input name="text" type="text" onkeydown=KeyDown(event)></input>
 						<span class="picture">
@@ -57,7 +59,7 @@
 					<span class="send">发送</span>
 				</div>
 				<div class="case">
-					<div class="swiper-container">
+					<div class="swiper-container" id="swiper-container">
 						<div class="swiper-wrapper">
 							<div class=" swiper-slide">
 								<div>产品简介</div>
@@ -77,7 +79,18 @@
 							</div>
 						</div>
 					</div>
-					<div class="swiper-pagination swiper-pagination-bullets"><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span></div>
+					<div id="swiper-pagination" class="swiper-pagination swiper-pagination-bullets"><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span></div>
+				</div>
+				<div class="personcase" style="display:none">
+					<div class="swiper-container" id="swiper-container-link">
+						<div class="swiper-wrapper" id="swiper-wrapper">
+							<div class="swiper-slide">
+							</div>
+							<div class="swiper-slide">
+							</div>
+						</div>
+					</div>
+					<div id="swiper-pagination-link" class="swiper-pagination swiper-pagination-bullets"><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span></div>
 				</div>
 			</div>
 		</div>
@@ -128,14 +141,23 @@
 		<!-- <script src="../../js/vconsole.js"></script> -->
 		<script src="../../js/exif.js"></script>
 		<script>
-			var mySwiper = new Swiper('.swiper-container', {
+			var mySwiper = new Swiper('#swiper-container', {
 				width: $(window).width(),
 				resistanceRatio: 0,
 				pagination: {
-					el: '.swiper-pagination',
+					el: '#swiper-pagination',
 				},
 				observer: true,
 			});
+			var mySwiperLink = new Swiper('#swiper-container-link', {
+				width: $(window).width(),
+				resistanceRatio: 0,
+				pagination: {
+					el: '#swiper-pagination-link',
+				},
+				observer: true,
+			});
+
 			var u = navigator.userAgent;
 			var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1; //android终端
 			var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
@@ -145,7 +167,7 @@
 		        $("input:file").removeAttr("capture");
 		   };
 		</script>
-		<script>
+		<!-- <script>
 			var duolunArr = [
 				['您好，各产品详细对比如下,点击可查看详情'],
 				[
@@ -195,6 +217,6 @@
 			str2 += '</div>';
 			setTimeout($(".scroll").append(str2),40)
 
-		</script>
+		</script> -->
 	</body>
 </html>
