--- a/ai_cms/Individualization.html
+++ b/ai_cms/Individualization.html
@@ -189,15 +189,26 @@
 				        	  	<span>管理中心</span>
 				        	  	<span class="left active"></span>
 				        	</a>
-				            <ul class="show">
-				                <li class="li_sub active">
-				                	<a href="robot_manage.html">
-				                		<span class="icon icon3"></span>
-						        	  	<span>机器人管理</span>
-						        	  
-				                	</a>
-				                </li>
-				            </ul>
+							<ul>
+								<li class="li_sub">
+									<a href="platform_manage.html">
+										<span class="icon icon3"></span>
+										<span>平台管理</span>
+									</a>
+								</li>
+								<li class="li_sub">
+									<a href="robot_manage.html">
+										<span class="icon icon3"></span>
+										<span>机器人管理</span>
+									</a>
+								</li>
+								<li class="li_sub">
+									<a href="product_manage.html">
+										<span class="icon icon3"></span>
+										<span>保险产品管理</span>
+									</a>
+								</li>
+							</ul>
 				        </li>
 				        <li class="li_father">
 				        	<a>
