--- a/ai_cms/balance_order_management.html
+++ b/ai_cms/balance_order_management.html
@@ -65,10 +65,21 @@
                     </a>
                     <ul>
                         <li class="li_sub">
+                            <a href="platform_manage.html">
+                                <span class="icon icon3"></span>
+                                <span>平台管理</span>
+                            </a>
+                        </li>
+                        <li class="li_sub">
                             <a href="robot_manage.html">
                                 <span class="icon icon3"></span>
                                 <span>机器人管理</span>
-
+                            </a>
+                        </li>
+                        <li class="li_sub">
+                            <a href="product_manage.html">
+                                <span class="icon icon3"></span>
+                                <span>保险产品管理</span>
                             </a>
                         </li>
                     </ul>
