--- a/ai_cms/detail.html
+++ b/ai_cms/detail.html
@@ -335,7 +335,7 @@
                      <span title="点击机器人托管按钮后，在所有客服不在线时机器人将会自动回复客户。"></span>-->
                 </div>
                 <p class="remark red">*限100字以内</p>
-                <span class="save">发布并保存</span>
+                <a href="edit_detail.html"><span class="save">发布并保存</span></a>
             </div>
         </div>
     </div>
